feat(core-attendance): 회의(날짜) 기반 출석 도메인 및 API 개편
• AttendanceRecord 엔티티/JPA 리포지토리 도입 (meeting_date + user_id UNIQUE, FK 보강)

• MeetingRepository 추가 (meeting_date PK 관리)

• CoreAttendanceService 리팩터링: 날짜 기반 저장/조회/요약 + 일괄 업서트

• CoreAttendanceController를 /core-attendance/meetings/** 구조로 정리

• DTO 정리(CreateDateRequest, SetAttendanceRequest, TeamResponse)

• 마이그레이션 V20251020__core_attendance_record.sql 추가

BREAKING CHANGE: 기존 출석 API 경로/포맷 변경 → 프론트 요청 경로 업데이트 필요